solc_mutator_ossfuzz_seed_corpus/test_sol/test_bedf9caad2f69f50a113c3bb1e68b84b4c1290150d24c89aca669ef9ed101122_8fecde6a9ad5179e5db80b1b4d24592d10ff3be0_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(function () external i0,bytes13 i1,bool i2)  returns(bool o0,function () external o1)
{
  o0 = (address(0x84aB5E00422956c7fA8FbA5aC607ECe6b5085FFa) <= address(0x9ea86934415c6e30fB17c820d5853dF92EB7A3f4));


  {




{
}

  }
  {

  }

  i2 = (~((40060016064160 / 105697643864506)) == 57420935543378);

}
function f1(int88 i0,address i1)  returns(address o0,uint64 o1,bytes memory o2)
{
  {
  }
}

==== Source: su1.sol ====
pragma abicoder v2;
pragma solidity >= 0.0.0;
// ----
// TypeError 4907: (su0.sol:262-299): Unary operator ~ cannot be applied to type rational_const 20030008032080 / 52848821932253
// TypeError 2271: (su0.sol:262-317): Operator == not compatible with types rational_const 20030008032080 / 52848821932253 and int_const 57420935543378
